dnl
dnl rcsid = $Header
dnl
AC_REVISION($Revision: 1.1 $)dnl
AC_INIT(qt.h)
AC_PREREQ(2.4)
AC_SUBST_FILE(md_makefile)
AC_CANONICAL_SYSTEM
AC_PROG_ANSI_TARGET_CC
AC_C_CROSS

md_dest="qtmd.h qtmdc.c qtmds.s qtmdb.s README.md"
case "$target" in
  alpha-dec-osf*)
	md_makefile=md/axp.1.Makefile
	md_sources="md/axp.h md/axp.c md/axp.s md/axp_b.s md/axp.README"
  ;;
  alpha*)
	md_makefile=md/axp.Makefile
	md_sources="md/axp.h md/axp.c md/axp.s md/axp_b.s md/axp.README"
  ;;
  mips-sgi-irix5*)
	md_makefile=md/mips-irix5.Makefile
	md_sources="md/mips.h md/null.c md/mips-irix5.s md/mips_b.s md/null.README" 
  ;;
  mips-sgi-irix6*)
	md_makefile=md/mips-irix6-32bit.Makefile
	md_sources="md/mips/h md/null.c md/mips-irix5.s md/mips_b.s md/null.README" 
  ;;
  mips-sgi-irix*)
	md_sources="md/mips.h md/null.c md/mips.s md/mips_b.s md/null.README" 
  ;;
  sparc-sun-solaris2*)
	sed 's/_qt_/qt_/' md/sparc.s > qtmds.s
	sed 's/_b_/b_/' md/sparc_b.s > qtmdb.s
	md_source="md/sparc.h md/null.c md/null.README"
	md_dest="qtmd.h qtmdc.c README.md"
  ;;
  sparc-sun-sunos*)
	md_source="md/sparc.h md/null.c md/mips.s md/mips_b.s md/null.README" 
  ;;
  rs6000*)
	md_sources="md/power.h md/null.c md/power.s md/power_b.s md/null.README"
	;;
  *)
	AC_MSG_ERROR("Unknown configuration $target")
	;;
esac
AC_LINK_FILES($md_source, $md_dest)
AC_OUTPUT(Makefile)