AC_INIT(rdb.h)
AC_PREREQ(2.10)

LAC_INIT
LAC_NEXUS_INIT
LAC_BUILD_LIBDIR

LAC_PATH_THREADS
LAC_PROG_CC
AC_C_CROSS
AC_PROG_CPP

if test "$GCC" = yes -a "$ac_cv_prog_gcc_shared" = no; then
  lac_build_shared="no"
fi

if test "$lac_build_shared" = yes; then
  LAC_SHARED_LIB
  lib_target=shared_lib
  LIBEXT=$SOEXT
else
  lib_target=static_lib
  LIBEXT=a
fi
AC_SUBST(lib_target)
AC_SUBST(LIBEXT)

LAC_MAKEFILES(makefile_header, Makefile)

AC_OUTPUT($lac_makefiles $lac_makefile_headers, 
  LAC_INSERT_MAKEFILE_HEADERS echo timestamp > stamp-h,
  [lac_makefiles="$lac_makefiles"]
)
