dnl
dnl rcsid = $Header: /nfs/globus1/src/master/ports0/docs/configure.in,v 1.1 1996/02/06 21:45:15 geisler Exp $
dnl
AC_INIT(P0_DOCS.README)
dnl
dnl handbill is not included right now, because it doesn't look current
dnl
SUBDIRS="spec"
AC_SUBST(SUBDIRS)
AC_CONFIG_SUBDIRS($SUBDIRS)
AC_OUTPUT(Makefile)
